feat: Add logic for get all categories, get category by id and get category preview file.
