# docs/swagger.yaml
@@ -1,5 +1,20 @@
 basePath: /
 definitions:
+  repository.Category:
+    properties:
+      authorsIds:
+        items:
+          type: integer
+        type: array
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      previewFileId:
+        type: string
+    type: object
   sendResponse.Response:
     properties:
       data: {}
@@ -777,6 +792,29 @@ paths:
       tags:
       - authors
   /api/categories:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/repository.Category'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+      summary: Get all categories
+      tags:
+      - categories
     post:
       consumes:
       - application/json
@@ -810,6 +848,38 @@ paths:
       summary: Create new category
       tags:
       - categories
+  /api/categories/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/repository.Category'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+      summary: Get category by id
+      tags:
+      - categories
   /api/categories/{id}/authors:
     delete:
       consumes:
@@ -829,8 +899,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/sendResponse.Response'
         "400":
@@ -862,8 +932,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/sendResponse.Response'
         "400":
@@ -875,6 +945,43 @@ paths:
           schema:
             $ref: '#/definitions/sendResponse.Response'
       summary: Add authors to category
+      tags:
+      - categories
+  /api/categories/{id}/preview-file/{fileName}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Category id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: File name
+        in: path
+        name: fileName
+        required: true
+        type: string
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: file
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+      summary: Get category preview file by file name
       tags:
       - categories
 securityDefinitions:
