# internal/routers/categoriesRouter/categoriesRouter.go
@@ -13,6 +13,9 @@ func AddCategoriesRoutes(s *gin.Engine, tokensClient tokensApi.TokensClient) {
 
 	categories := s.Group("/api/categories")
 	{
+		categories.GET("/", cs.GetCategories)
+		categories.GET("/:id", cs.GetCategoryById)
+		categories.GET("/:id/preview-file/:fileName", cs.GetPreviewFile)
 		categories.POST("/", middlewares.CheckIsAdmin(tokensClient), cs.CreateCategory)
 		categories.POST("/:id/authors", middlewares.CheckIsAdmin(tokensClient), cs.CreateCategory)
 		categories.DELETE("/:id/authors", middlewares.CheckIsAdmin(tokensClient), cs.CreateCategory)
